# crawl-test

./: .env  README.md  docker-compose.override.example.yml  docker-compose.yml
backend/: pyproject.toml
backend/api/: settings.py
crawler/: pyproject.toml
docker/: Dockerfile.backend  Dockerfile.crawler  Dockerfile.dev.frontend  Dockerfile.frontend
frontend/: package.json
